fix(settings): source url text-wrap

--- a/src/app/settings/views/Images/Sources/components/SourcesTable/_index.scss
+++ b/src/app/settings/views/Images/Sources/components/SourcesTable/_index.scss
@@ -20,6 +20,11 @@
       text-align: center;
     }
 
+    .url {
+      word-break: break-all;
+      white-space: normal;
+    }
+
     .actions {
       width: 20%;
     }
